# Provereno-UI-for-Pravda

./: README.md
Provereno-UI-for-Pravda/provereno-ui/: .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
Provereno-UI-for-Pravda/provereno-ui/provereno/: audit.py  auth.py  capture.py  config.py  database.py  forensic.py  jobs.py  main.py  models.py  url_monitor.py
Provereno-UI-for-Pravda/provereno-ui/provereno/routers/: auth.py  bulk.py  collections.py  export.py  job_routes.py  pages.py  public.py  snapshots.py
Provereno-UI-for-Pravda/provereno-ui/provereno/static/: style.css
Provereno-UI-for-Pravda/provereno-ui/provereno/templates/: audit.html  base.html  bulk.html  bulk_progress.html  collection_detail.html  collections.html  dashboard.html  job_wait.html  login.html  public_evidence.html  snapshot_detail.html  snapshots.html
provereno-ui/provereno/: jobs.py
provereno-ui/provereno/routers/: auth.py  collections.py  export.py  job_routes.py  pages.py  snapshots.py
provereno-ui/provereno/templates/: audit.html
