[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "provereno"
version = "1.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "playwright>=1.44",
    "weasyprint>=61",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["provereno*"]
